[gd_scene load_steps=10 format=3 uid="uid://bp2sap1brkhfa"]

[ext_resource type="Texture2D" uid="uid://0weng6gyg3pu" path="res://resources/sprites/GUI/menu/top_bar_background.png" id="1_8mpe6"]
[ext_resource type="Script" uid="uid://bm2lnsffltmvn" path="res://scenes/GUI/main_game/top_bar/gui_top_bar.gd" id="1_om12v"]
[ext_resource type="PackedScene" uid="uid://dm1jpn72n0ue7" path="res://scenes/GUI/main_game/top_bar/gui_gold.tscn" id="2_mmkmm"]
[ext_resource type="PackedScene" uid="uid://c2ttrcf1bo4ju" path="res://scenes/GUI/main_game/characters/gui_player.tscn" id="4_mmkmm"]
[ext_resource type="PackedScene" uid="uid://ps5vjsn1nr2c" path="res://scenes/GUI/main_game/top_bar/gui_rating.tscn" id="5_8mpe6"]
[ext_resource type="PackedScene" uid="uid://ct8p64yajr0fh" path="res://scenes/GUI/controls/buttons/gui_full_deck_button.tscn" id="6_mmkmm"]
[ext_resource type="PackedScene" uid="uid://cs81yivlig7mc" path="res://scenes/GUI/main_game/top_bar/gui_level_title.tscn" id="6_sgvji"]
[ext_resource type="PackedScene" uid="uid://c6xeh4cid7k8w" path="res://scenes/GUI/controls/buttons/gui_library_button.tscn" id="7_ey64j"]
[ext_resource type="PackedScene" uid="uid://bv0vcudygflck" path="res://scenes/GUI/controls/buttons/gui_settings_button.tscn" id="9_j76ip"]

[node name="GUITopBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 16)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
script = ExtResource("1_om12v")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_8mpe6")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 0

[node name="Container" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 104.0
offset_bottom = 6.0
grow_vertical = 2
theme_override_constants/separation = 6

[node name="GUIPlayer" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("4_mmkmm")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIRating" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("5_8mpe6")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIGold" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("2_mmkmm")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUILevelTitle" parent="MarginContainer/Container" instance=ExtResource("6_sgvji")]
unique_name_in_owner = true
layout_mode = 1

[node name="RightContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 2

[node name="GUIFullDeckButton" parent="MarginContainer/Container/RightContainer" instance=ExtResource("6_mmkmm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="GUILibraryButton" parent="MarginContainer/Container/RightContainer" instance=ExtResource("7_ey64j")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUISettingsButton" parent="MarginContainer/Container/RightContainer" instance=ExtResource("9_j76ip")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
